[workspace]
members = ["contracts/*", "packages/*"]
resolver = "2"

# [profile.release.package.pfc-steak]
# opt-level = 3
# debug = false
# debug-assertions = false
# codegen-units = 1
# incremental = false

[profile.release]
codegen-units = 1
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
panic = 'abort'
incremental = false
overflow-checks = true


# list workspace dependencies here
[workspace.dependencies]
cosmwasm-schema = "1.0.0"
cw20-base = { version = "0.13", features = ["library"] }
cw2 = { version = "0.13" }
cw20 = { version = "0.13" }
cosmwasm-std = "1.1.2"
cw-storage-plus = "0.13"
