[package]
name = "pfc-steak-hub"
version = "2.1.12"
authors = ["larry <gm@larry.engineer>", "PFC <pfc-validator@protonmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/st4k3h0us3/steak-contracts"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "1.0", features = ["staking", "stargate"] }
cw2="0.13"
cw20 = "0.13"
cw20-base = { version = "0.13", features = ["library"] }
cw-storage-plus = "0.13"
pfc-steak = { path = "../../packages/steak" }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
pfc-fee-split = "0.1.1"
subtle-encoding = { version = "0.5", features = ["bech32-preview"] }
sha2 = "0.10.6"
prost = "0.10"
cosmos-sdk-proto = { version = "0.12.3", default-features = false }
cosmwasm-schema = "1.1.3"
schemars = "0.8.10"

# [dev-dependencies]
#serde = { version = "1.0.103", default-features = false, features = ["derive"] }
