[package]
name = "pfc-steak-hub"
version = "2.1.15"
authors = ["larry <gm@larry.engineer>", "PFC <pfc-validator@protonmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/st4k3h0us3/steak-contracts"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# Add feature "cranelift" to default if you need 32 bit or ARM support
default = ["cranelift"]
# Use cranelift backend instead of singlepass. This is required for development on 32 bit or ARM machines.
cranelift = ["cosmwasm-vm/cranelift"]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces", "cosmwasm-vm/backtraces"]

[dependencies]
cosmwasm-std = { workspace = true, features = ["staking", "stargate", "iterator"] }
cw2 = { workspace = true }
cw20 = { workspace = true }
cw20-base = { workspace = true, features = ["library"] }
cw-storage-plus = { workspace = true }
pfc-steak = { path = "../../packages/steak" }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
pfc-fee-split = { version = "0.1.1" }
sha2 = "0.10.6"
prost = {version = "0.11.0", default-features = false, features = ["prost-derive"]}
prost-types = {version = "0.11.1", default-features = false}
cosmos-sdk-proto = { version = "0.16.0", default-features = false }
cosmwasm-schema = { workspace = true }
schemars = "0.8.10"
hex = "0.4.3"

[dev-dependencies]
#serde = { version = "1.0.103", default-features = false, features = ["derive"] }
hex-literal = "0.3.1"
cosmwasm-vm = { version = "1.1.2", default-features = false, features = ["iterator"] }