[package]
name = "pfc-steak-token"
version = "2.0.1"
authors = ["larry <gm@larry.engineer>", "PFC <pfc-validator@protonmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/st4k3h0us3/steak-contracts"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { workspace = true }
cw20 = { workspace = true }
cw20-base = { workspace = true, features = ["library"] }
